CHANGE : read.me

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title> Minsun Kim </title>
-    <script src="artist.js"></script>
+    <script src="/src/artist.js"></script>
 </head>
 
 <body>
